--- a/src/index.bundle.css
+++ b/src/index.bundle.css
@@ -1,3 +1,6 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900');
 
 /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 :::::                                                 :::::
@@ -11,11 +14,82 @@
 :::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 
 /*Inicio Jota*/
+:root {
+  --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #dc3545;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #ffc107;
+  --bs-green: #198754;
+  --bs-teal: #20c997;
+  --bs-cyan: #0dcaf0;
+  --bs-black: #000000;
+  --bs-white: #ffffff;
+  --bs-gray: #7E8299;
+  --bs-gray-dark: #3F4254;
+  --bs-gray-100: #f5f8fa;
+  --bs-gray-200: #eff2f5;
+  --bs-gray-300: #E4E6EF;
+  --bs-gray-400: #B5B5C3;
+  --bs-gray-500: #A1A5B7;
+  --bs-gray-600: #7E8299;
+  --bs-gray-700: #5E6278;
+  --bs-gray-800: #3F4254;
+  --bs-gray-900: #181C32;
+  --bs-white: #ffffff;
+  --bs-light: #f5f8fa;
+  --bs-primary: #00b2ff;
+  --bs-secondary: #E4E6EF;
+  --bs-success: #50cd89;
+  --bs-info: #7239ea;
+  --bs-warning: #ffc700;
+  --bs-danger: #f1416c;
+  --bs-dark: #181C32;
+  --bs-white-rgb: 255, 255, 255;
+  --bs-light-rgb: 245, 248, 250;
+  --bs-primary-rgb: 0, 178, 255;
+  --bs-secondary-rgb: 228, 230, 239;
+  --bs-success-rgb: 80, 205, 137;
+  --bs-info-rgb: 114, 57, 234;
+  --bs-warning-rgb: 255, 199, 0;
+  --bs-danger-rgb: 241, 65, 108;
+  --bs-dark-rgb: 24, 28, 50;
+  --bs-white-rgb: 255, 255, 255;
+  --bs-black-rgb: 0, 0, 0;
+  --bs-body-color-rgb: 24, 28, 50;
+  --bs-body-bg-rgb: 255, 255, 255;
+  --bs-font-sans-serif: Inter, Helvetica, "sans-serif";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-size: 1rem;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 1.5;
+  --bs-body-color: #181C32;
+  --bs-body-bg: #ffffff;
+  --bs-border-width: 1px;
+  --bs-border-style: solid;
+  --bs-border-color: #eff2f5;
+  --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+  --bs-border-radius: 0.475rem;
+  --bs-border-radius-sm: 0.425rem;
+  --bs-border-radius-lg: 0.625rem;
+  --bs-border-radius-xl: 1rem;
+  --bs-border-radius-2xl: 2rem;
+  --bs-border-radius-pill: 50rem;
+  --bs-link-color: #00b2ff;
+  --bs-link-hover-color: #0098da;
+  --bs-code-color: #b93993;
+  --bs-highlight-bg: #fff3cd;
+}
+
+
 
 .ico_Desenv {display: inline-block;}
 .frase_Desenv {font-size: 2rem;}
 
-@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /*font-family: 'Raleway', sans-serif;*/
 
@@ -1404,77 +1478,7 @@ background-image: linear-gradient(315deg, #4dccc6 0%, #96e4df 74%);
 
 
 
-@charset "UTF-8";
-:root {
-  --bs-blue: #0d6efd;
-  --bs-indigo: #6610f2;
-  --bs-purple: #6f42c1;
-  --bs-pink: #d63384;
-  --bs-red: #dc3545;
-  --bs-orange: #fd7e14;
-  --bs-yellow: #ffc107;
-  --bs-green: #198754;
-  --bs-teal: #20c997;
-  --bs-cyan: #0dcaf0;
-  --bs-black: #000000;
-  --bs-white: #ffffff;
-  --bs-gray: #7E8299;
-  --bs-gray-dark: #3F4254;
-  --bs-gray-100: #f5f8fa;
-  --bs-gray-200: #eff2f5;
-  --bs-gray-300: #E4E6EF;
-  --bs-gray-400: #B5B5C3;
-  --bs-gray-500: #A1A5B7;
-  --bs-gray-600: #7E8299;
-  --bs-gray-700: #5E6278;
-  --bs-gray-800: #3F4254;
-  --bs-gray-900: #181C32;
-  --bs-white: #ffffff;
-  --bs-light: #f5f8fa;
-  --bs-primary: #00b2ff;
-  --bs-secondary: #E4E6EF;
-  --bs-success: #50cd89;
-  --bs-info: #7239ea;
-  --bs-warning: #ffc700;
-  --bs-danger: #f1416c;
-  --bs-dark: #181C32;
-  --bs-white-rgb: 255, 255, 255;
-  --bs-light-rgb: 245, 248, 250;
-  --bs-primary-rgb: 0, 178, 255;
-  --bs-secondary-rgb: 228, 230, 239;
-  --bs-success-rgb: 80, 205, 137;
-  --bs-info-rgb: 114, 57, 234;
-  --bs-warning-rgb: 255, 199, 0;
-  --bs-danger-rgb: 241, 65, 108;
-  --bs-dark-rgb: 24, 28, 50;
-  --bs-white-rgb: 255, 255, 255;
-  --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 24, 28, 50;
-  --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: Inter, Helvetica, "sans-serif";
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
-  --bs-body-font-size: 1rem;
-  --bs-body-font-weight: 400;
-  --bs-body-line-height: 1.5;
-  --bs-body-color: #181C32;
-  --bs-body-bg: #ffffff;
-  --bs-border-width: 1px;
-  --bs-border-style: solid;
-  --bs-border-color: #eff2f5;
-  --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-  --bs-border-radius: 0.475rem;
-  --bs-border-radius-sm: 0.425rem;
-  --bs-border-radius-lg: 0.625rem;
-  --bs-border-radius-xl: 1rem;
-  --bs-border-radius-2xl: 2rem;
-  --bs-border-radius-pill: 50rem;
-  --bs-link-color: #00b2ff;
-  --bs-link-hover-color: #0098da;
-  --bs-code-color: #b93993;
-  --bs-highlight-bg: #fff3cd;
-}
+
 
 *,
 *::before,
@@ -47221,6 +47225,7 @@ body,
 
 .app-blank {
   background-color: var(--kt-app-blank-bg-color);
+  height: 100%;
 }
 
 [data-kt-app-reset-transition=true] * {
