--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -13,7 +13,7 @@
 :::::                                                 :::::
 :::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 
-/*Inicio Jota*/
+/*Inicio Jota dfgdf*/
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
