--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -48744,7 +48744,7 @@ body,
     background-color: var(--kt-app-aside-base-bg-color-mobile);
     box-shadow: var(--kt-app-aside-base-box-shadow-mobile);
     border-left: var(--kt-app-aside-base-border-start-mobile);
-    order-right: var(--kt-app-aside-base-border-end-mobile);
+    border-right: var(--kt-app-aside-base-border-end-mobile);
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 0px;
