--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -16,6 +16,28 @@
 /*ATUALIZAÇÃO = 21/03/2023*/
 
 
+/*PERFIL*/
+/*.avatarPerfil div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}*/
+.avatarPerfil div span.inicialNome, .avatarPerfil span.inicialNome {
+    width: 100%;
+    height: 100%;
+    background: #2196F3;
+    color: white;
+/*    font-size: 1.3rem;*/
+    text-align: center;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+}
+
+.avatarPerfil div img {}
+
+
 /*OLHINHO*/
 [data-theme=light] .password-control {position: absolute;top: 11px;right: 13px;display: inline-block;width: 21px;height: 21px;border: 0;background: url(./images/no-view.svg) 0 0 no-repeat;}
 [data-theme=light] .password-control.view {background: url(./images/view.svg) 0 0 no-repeat;}
@@ -105,7 +127,7 @@
 
 /*NEW AJUSTE AUTOMATICO DOS CARDS*/
 .cardAuto-1 .card .card-body .disabled {background-color: #5454540f!important;}
-.cardAuto-1 .card .card-body a {min-height: 166px;}
+/*.cardAuto-1 .card .card-body a, .cardAuto-1 .card button {min-height: 166px;}*/
 .cardAuto-1 .card .card-body a .fig-card {}
 .cardAuto-1 .card .card-body a .tit-card {}
 .cardAuto-1 .card .card-body a .tit-card h3 {}
