--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -15,6 +15,21 @@
 
 /*ATUALIZAÇÃO = 21/03/2023*/
 
+
+/*CAROUSSEL*/
+.carousel.slide {} 
+.carousel.slide .carousel-inner {} 
+.carousel.slide .carousel-inner .carousel-item {} 
+.carousel.slide .carousel-inner .carousel-item img {
+/*    width: initial;
+    border: 0!important;
+    max-width: none;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: inherit;*/
+}
 /*PERFIL*/
 .avatarPerfil {
     justify-content: flex-start;
