--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -60,14 +60,16 @@
 .avatarPerfil div span.inicialNome, .avatarPerfil span.inicialNome {
     width: 100%;
     height: 100%;
-    background: #2196F3;
-    color: white;
-/*    font-size: 1.3rem;*/
+    color: var(--kt-text-dark) !important;
+    font-weight: 700;
+    /*font-size: 6.0rem;*/
     text-align: center;
     display: flex;
     align-items: center;
     margin: auto;
     justify-content: center;
+    background: rgb(1 106 180);
+    background: radial-gradient(circle, rgb(0 237 213) 0%, rgb(1 106 180) 100%);
 }
 
 .avatarPerfil div span.closeAvatar {
