--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -15,6 +15,28 @@
 
 /*ATUALIZAÇÃO = 21/03/2023*/
 
+element.style {
+    overflow: hidden;
+    width: 29px;
+    padding: 0;
+}
+.jcbr .col-jota-1 a {
+    width: 110px;
+    margin: auto;
+}
+@media (max-width: 600px) {
+  .col-jota-1 {
+      width: 50px;
+      padding: 0 0px 0px 16px;
+  }
+}
+.col-jota-1 {
+    margin-right: auto !important;
+    margin-bottom: 0 !important;
+    justify-content: center !important;
+    padding: 0 0px 0 20px;
+    overflow: hidden;
+}
 
 .separaMoldeCards .col-J {animation-name: card;position: relative;animation-timing-function: cubic-bezier(0.18, 0.89, 0.02, 1.28);}
 
@@ -49771,16 +49793,15 @@ section:hover {
           animation: rotation 1s linear infinite;
 }
 
-
-
 .boxLoading {
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
-    /*align-content: space-around;*/
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .loader-18, .loader-18:after {
