--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -15,32 +15,20 @@
 
 /*ATUALIZAÇÃO = 21/03/2023*/
 
-element.style {
-    overflow: hidden;
-    width: 29px;
-    padding: 0;
-}
-.jcbr .col-jota-1 a {
-    width: 110px;
-    margin: auto;
-}
+/* ::: Anima Icone NERCU ::: */
+.app-header-secondary .icoN, .app-header-secondary .icoT {padding: 0;border: 0!important;overflow: hidden;}
+
 @media (max-width: 600px) {
-  .col-jota-1 {
-      width: 50px;
-      padding: 0 0px 0px 16px;
-  }
-}
-.col-jota-1 {
-    margin-right: auto !important;
-    margin-bottom: 0 !important;
-    justify-content: center !important;
-    padding: 0 0px 0 20px;
-    overflow: hidden;
+  .app-header-secondary .icoN {width: 27px;}
+  .app-header-secondary .icoN img {transition: 1.3s;transform: translateX(0px);}
+  .app-header-secondary .icoN:hover img, .app-header-secondary .icoN:focus img {transition: 1.5s;transform: translateX(-71px);}
+  .app-header-secondary .icoT {width: 25px;animation-name: ico-t;}
+  .app-header-secondary .icoT img {transition: 1.3s;transform: translateX(0px);}
+  .app-header-secondary .icoT:hover img, .app-header-secondary .icoT:focus img {transition: 1.5s;transform: translateX(-71px);}
 }
 
+/* ::: Anima Card - teste ::: */
 .separaMoldeCards .col-J {animation-name: card;position: relative;animation-timing-function: cubic-bezier(0.18, 0.89, 0.02, 1.28);}
-
-/*Anima Card - teste*/
 .separaMoldeCards .col-J:nth-child(1) {animation-duration: 0.4s;}
 .separaMoldeCards .col-J:nth-child(2) {animation-duration: 0.6s;}
 .separaMoldeCards .col-J:nth-child(3) {animation-duration: 0.8s;}
