--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -48,18 +48,22 @@
 }
 
 .avatarPerfil .comuniki {
-    height: 13px;
-    width: 13px;
+    height: 20px;
+    width: 20px;
+    color: white;
     position: absolute;
     background-color: var(--kt-danger);
     display: block;
     text-align: center;
     line-height: 18px;
     padding: 0!important;
-    top: -2px;
-    right: -4px;
+    top: -5px;
+    right: -6px;
     z-index: 9;
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     -webkit-animation: shockwave 1.2s 0.65s ease-out infinite;
     animation: shockwave 1.2s 0.65s ease-out infinite;
 
