--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -193,7 +193,7 @@
 .carousel.slide .carousel-inner .imgbanner {
     position: relative;
     height: auto;
-    background-position: center center;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
 }
